--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 MONGO = mongodb+srv://feicoding2023:Gmail0511@cluster0.hviapzc.mongodb.net/test?retryWrites=true&w=majority
+
+GOOGLE_CLIENT_ID = 219372472794-qg4jgoe2c4dtm496bk1367gv137m45pk.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+
+NEXTAUTH_SECRET = 'greatgatsby'
+NEXTAUTH_URL = 'http://localhost:3000'
