fix some problems

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ GOOGLE_CLIENT_ID = 219372472794-qg4jgoe2c4dtm496bk1367gv137m45pk.apps.googleuser
 GOOGLE_CLIENT_SECRET = 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
 
 NEXTAUTH_SECRET = 'greatgatsby'
-NEXTAUTH_URL = 'http://localhost:3000'
+NEXTAUTH_URL = 'https://next-mongo-blog-94ilxht8q-coding-cookings-projects.vercel.app/'
